feat: added logout route and removed broken comment
