# backend/src/endpoints/auth/index.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express'
 import createUser from './create-user.js'
 import login from './login.js'
+import logout from './logout.js'
 
 /**
  * Routes for auth-related paths (`/auth/...`). Mounted under /v1 in app.ts,
@@ -10,3 +11,4 @@ export const authRouter = Router()
 
 authRouter.use(createUser)
 authRouter.use(login)
+authRouter.use(logout)
